; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid.c_grid_trim_history.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid.c_grid_trim_history.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i64, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grid*, i64)* @grid_trim_history to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @grid_trim_history(%struct.grid* %0, i64 %1) #0 {
  %3 = alloca %struct.grid*, align 8
  %4 = alloca i64, align 8
  store %struct.grid* %0, %struct.grid** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.grid*, %struct.grid** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @grid_free_lines(%struct.grid* %5, i32 0, i64 %6)
  %8 = load %struct.grid*, %struct.grid** %3, align 8
  %9 = getelementptr inbounds %struct.grid, %struct.grid* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load %struct.grid*, %struct.grid** %3, align 8
  %13 = getelementptr inbounds %struct.grid, %struct.grid* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load %struct.grid*, %struct.grid** %3, align 8
  %18 = getelementptr inbounds %struct.grid, %struct.grid* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.grid*, %struct.grid** %3, align 8
  %21 = getelementptr inbounds %struct.grid, %struct.grid* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = add i64 %19, %22
  %24 = load i64, i64* %4, align 8
  %25 = sub i64 %23, %24
  %26 = mul i64 %25, 4
  %27 = call i32 @memmove(i32* %11, i32* %16, i64 %26)
  ret void
}

declare dso_local i32 @grid_free_lines(%struct.grid*, i32, i64) #1

declare dso_local i32 @memmove(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
